--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "meteor-node-stubs": "~0.2.0",
+    "opn": "^4.0.2",
+    "path-browserify": "0.0.0",
     "shelljs": "^0.7.0"
   },
   "version": "1.0.0",
