--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "meteor-node-stubs": "~0.2.0",
     "opn": "^4.0.2",
     "path-browserify": "0.0.0",
-    "shelljs": "^0.7.0"
+    "shelljs": "^0.7.0",
+    "photon": "connors/photon"
   },
   "version": "1.0.0",
   "main": "index.js",
