--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "start": "meteor --settings settings.json"
   },
   "dependencies": {
+    "lodash": "^4.13.1",
     "meteor-node-stubs": "~0.2.0",
     "opn": "^4.0.2",
     "path-browserify": "0.0.0",
-    "shelljs": "^0.7.0",
-    "photon": "connors/photon"
+    "photon": "connors/photon",
+    "shelljs": "^0.7.0"
   },
   "version": "1.0.0",
   "main": "index.js",
